--- a/TaxGenieOnline/Default.Master
+++ b/TaxGenieOnline/Default.Master
@@ -13,7 +13,7 @@
     <script src="scripts/ddsmoothmenu.js" type="text/javascript"></script>
     <script src="scripts/jquery.min.js" type="text/javascript"></script>
     <script src="scripts/jquery.easing.1.3.js" type="text/javascript"></script>
-    <script src="scripts/slides.jquery.js" type="text/javascript"></script>
+    <%--<script src="scripts/slides.jquery.js" type="text/javascript"></script>--%>
     <script type="text/javascript">
         ddsmoothmenu.init({
             mainmenuid: "smoothmenu1", //menu DIV id
@@ -24,13 +24,13 @@
             contentsource: "markup" //"markup" or ["container_id", "path_to_menu_file"]
         });
         $(function () {
-            $("#slides").slides({ play: 3000,
-                pause: 2500,
-                hoverPause: true,
-                slideSpeed: 350,
-                slideEasing: "easeOutQuad",
-                pagination: false
-            });
+//            $("#slides").slides({ play: 3000,
+//                pause: 2500,
+//                hoverPause: true,
+//                slideSpeed: 350,
+//                slideEasing: "easeOutQuad",
+//                pagination: false
+//            });
             var watermark = 'Search';
             $('input.srch').blur(function () {
                 if ($(this).val().length == 0)
