--- a/TaxGenieOnline/Default.Master
+++ b/TaxGenieOnline/Default.Master
@@ -13,6 +13,7 @@
     <script src="scripts/ddsmoothmenu.js" type="text/javascript"></script>
     <script src="scripts/jquery.min.js" type="text/javascript"></script>
     <script src="scripts/jquery.easing.1.3.js" type="text/javascript"></script>
+    <script src="scripts/jquery-scroll.js" type="text/javascript"></script>
     <%--<script src="scripts/slides.jquery.js" type="text/javascript"></script>--%>
     <script type="text/javascript">
         ddsmoothmenu.init({
@@ -24,13 +25,13 @@
             contentsource: "markup" //"markup" or ["container_id", "path_to_menu_file"]
         });
         $(function () {
-//            $("#slides").slides({ play: 3000,
-//                pause: 2500,
-//                hoverPause: true,
-//                slideSpeed: 350,
-//                slideEasing: "easeOutQuad",
-//                pagination: false
-//            });
+            //            $("#slides").slides({ play: 3000,
+            //                pause: 2500,
+            //                hoverPause: true,
+            //                slideSpeed: 350,
+            //                slideEasing: "easeOutQuad",
+            //                pagination: false
+            //            });
             var watermark = 'Search';
             $('input.srch').blur(function () {
                 if ($(this).val().length == 0)
@@ -43,6 +44,32 @@
                     $("a.mg").click();
                     event.preventDefault();
                 }
+            });
+            var $elem = $('#content');
+
+            // show the buttons
+            $('#nav_up').fadeIn('slow').hide();
+            // whenever we scroll fade out both buttons
+            $(window).bind('scrollstart', function () {
+                if (window.pageYOffset > 20) {
+                    $('#nav_up').show().stop().animate({ 'opacity': '0.2' });
+                }
+            });
+            // ... and whenever we stop scrolling fade in both buttons
+            $(window).bind('scrollstop', function () {
+                if (window.pageYOffset < 20) {
+                    $('#nav_up').hide();
+                }
+                else {
+                    $('#nav_up').show();
+                }
+                $('#nav_up').stop().animate({ 'opacity': '0.8' });
+            });
+
+            // clicking the "up" button will make the page scroll to the top of the page
+            $('#nav_up').click(function (e) {
+                $('html, body').animate({ scrollTop: '0px' }, 800);
+                $('#nav_up').fadeIn('slow').hide();
             });
         });
     </script>
@@ -249,13 +276,13 @@
             <table width="100%">
                 <tr>
                     <td align="right">
-                        Home Content:<a href="/admin/HomeContentEditor.aspx">Add\Upload</a>
+                        Home Content:<a href="/admin/HomeContentEditor.aspx">Add\Upload</a><a href="/admin/EditHomeContents.aspx">Edit\Delete</a>
                     </td>
                     <td align="right">
-                        What's New:<a href="/admin/WhatsNew.aspx">Add\Upload</a>
+                        What's New:<a href="/admin/WhatsNew.aspx">Add\Upload</a><a href="/admin/EditWhatsNew.aspx">Delete</a>
                     </td>
                     <td>
-                        Tax Update:<a href="/admin/TaxUpdateEditor.aspx">Add\Upload</a>
+                        Tax Update:<a href="/admin/TaxUpdateEditor.aspx">Add\Upload</a><a href="/admin/EditTaxUpdate.aspx">Edit\Delete</a>
                     </td>
                 </tr>
                 <tr>
@@ -263,6 +290,7 @@
                         Content:<a href="/admin/uploadnotifications.aspx">Add\Upload</a><a href="/admin/editnotifications.aspx">Edit\Delete</a>
                     </td>
                     <td style="width: 250px">
+                     Document Upload:<a href="admin/DocUploadToServer.aspx">Add\Upload</a>
                     </td>
                     <td>
                         Flash News:<a href="/admin/uploadnewsflash.aspx">Add\Upload</a><a href="/admin/editnewsflash.aspx">Edit\Delete</a>
@@ -412,5 +440,6 @@
             </div>
         </div>
     </div>
+    <div class="nav_up" id="nav_up"></div>
 </body>
 </html>
